--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ dependencies = [
     "pyasn1-modules==0.4.1",
     "pydantic==2.10.6",
     "pydantic-core==2.27.2",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.26.0",
     "pytz~=2025.1",
     "requests==2.32.3",
     "requests-oauthlib==2.0.0",
